Changes for 4.2.0alpha4

New features:
A.F.I...S. [ZBXNEXT-4087] implemented preprocessing of LLD rules (Ivo, wiper)

Bug fixes:
A.F....... [ZBX-15179] fixed when message about blocking user login is displayed only on next login attempt (gcalenko, vasilijs)
...G....S. [ZBX-15494] fixed handling numbers that written in scientific notation (asitals)
........S. [ZBX-15533] fixed cutting and trimming event tags and values (asitals)
.......P.. [ZBX-15442] fixed reporting idle time in datasender's process state information (asitals)
..F....... [ZBX-15424] fixed when multiselect doesn't trim values and recognizes untrimmed values as new ones (vasilijs)
..F....... [ZBX-14644] fixed maintenance time periods "start_date" field being reset to "1920" instead of DB default value when updating via edit form (Ivo)
A......... [ZBX-15422] fixed SQL errors when linked template have item prototype with equal key as host item (Sasha)
..F....... [ZBX-15456] fixed incorrect style property in Monitoring->Problems; removed unused id from filter form (agriscenko)
..F....... [ZBX-15412] fixed Name column overlaps the Application column in the Template view (vasilijs)
...G...... [ZBX-15316] fixed problem with socket inheritance preventing Windows agent from restarting under certain circumstances (kalimulin)
.D........ [ZBX-15271] added link to documentation in all man pages (kalimulin)

--------------------------------------------------------------------------------
Changes for 4.2.0alpha3

New features:
....I...S. [ZBXNEXT-4868] added TimescaleDB support (kalimulin)
A.F.I...S. [ZBXNEXT-4877] implemented support for custom JSON path in LLD macros (Ivo, vso)
..F....... [ZBXNEXT-1190] implemented item prototype mass update and combined adding, updating and removing of applications in single control in item mass update form (Ivo)
A......... [ZBXNEXT-4933] dropped support of "elementid" in map.create() and map.update() methods (Sasha)