@@ -248,7 +248,7 @@ DBUser=zabbix
 ### Option: StartTimers
 #	Number of pre-forked instances of timers.
 #	Timers process maintenance periods.
-#	Only the first timer process handles host maintenance updates. Problem suppression updates are shared.
+#	Only the first timer process handles host maintenance updates. Problem suppression updates are shared
 #	between all timers.
 #
 # Mandatory: no
